<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!--

        Licensed to the Apache Software Foundation (ASF) under one or more
        contributor license agreements.  See the NOTICE file distributed with
        this work for additional information regarding copyright ownership.
        The ASF licenses this file to You under the Apache License, Version 2.0
        (the "License"); you may not use this file except in compliance with
        the License.  You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    -->

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.servicemix.bundles</groupId>
        <artifactId>bundles-pom</artifactId>
        <version>16-SNAPSHOT</version>
        <relativePath>../bundles-pom/pom.xml</relativePath>
    </parent>

    <groupId>org.apache.servicemix.bundles</groupId>
    <artifactId>org.apache.servicemix.bundles.xalan</artifactId>
    <version>2.7.3_2-SNAPSHOT</version>
    <packaging>bundle</packaging>
    <name>Apache ServiceMix :: Bundles :: ${pkgArtifactId}</name>
    <description>This OSGi bundle wraps ${pkgArtifactId} ${pkgVersion} jar file.</description>

    <scm>
        <connection>scm:git:https://gitbox.apache.org/repos/asf/servicemix-bundles.git</connection>
        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/servicemix-bundles.git</developerConnection>
        <url>https://gitbox.apache.org/repos/asf?p=servicemix-bundles.git</url>
  </scm>

    <properties>
        <pkgGroupId>xalan</pkgGroupId>
        <pkgArtifactId>xalan</pkgArtifactId>
        <pkgVersion>2.7.3</pkgVersion>
        <servicemix.osgi.source.version>2.7.3.2</servicemix.osgi.source.version>
        <servicemix.osgi.export>
          java_cup*;version=${pkgVersion};-split-package:=merge-first,
          org.apache.xalan*;version=${pkgVersion};-split-package:=merge-first,
          org.apache.xml.dtm*;version=${pkgVersion};-split-package:=merge-first,
          org.apache.xml.res*;version=${pkgVersion};-split-package:=merge-first,
          org.apache.xml.serializer*;version=${pkgVersion};-split-package:=merge-first,
          org.apache.xml.utils*;version=${pkgVersion};-split-package:=merge-first,
          org.apache.xpath*;version=${pkgVersion};-split-package:=merge-first
        </servicemix.osgi.export>
        <servicemix.osgi.import.pkg>
          org.apache.bcel*;version="[5.1,6)",
          org.apache.xerces*;version="[2.12.2,3)",
          org.apache.xml.serialize*;version="[2.7.3,3)",
          org.w3c.dom.xpath;resolution:=optional,
          javax.naming,
          javax.xml.datatype,
          javax.xml.namespace,
          javax.xml.parsers,
          javax.xml.transform,
          javax.xml.transform.dom,
          javax.xml.transform.sax,
          javax.xml.transform.stream,
          javax.xml.xpath,
          javax.xml,
          org.w3c.dom*,
          org.xml.sax*
        </servicemix.osgi.import.pkg>
        <servicemix.osgi.private.pkg>
            META-INF.services;-split-package:=merge-first
        </servicemix.osgi.private.pkg>
    </properties>

    <dependencies>
        <dependency>
            <groupId>${pkgGroupId}</groupId>
            <artifactId>${pkgArtifactId}</artifactId>
            <version>${pkgVersion}</version>
            <optional>false</optional>
        </dependency>

        <!-- sources -->
        <!-- Not available
        <dependency>
            <groupId>${pkgGroupId}</groupId>
            <artifactId>${pkgArtifactId}</artifactId>
            <version>${pkgVersion}</version>
            <classifier>sources</classifier>
            <optional>false</optional>
        </dependency>
        -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <includes>
                                    <include>${pkgGroupId}:${pkgArtifactId}</include>
                                </includes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>${pkgGroupId}:${pkgArtifactId}</artifact>
                                    <excludes>
                                        <exclude>**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
